@@ -1,3 +1,15 @@
+2011-05-08  Jarkko Sakkinen  <jarkko.j.sakkinen@gmail.com>
+
+        Reviewed by Kenneth Rohde Christiansen.
+
+        [Qt] GraphicsContext3D::getImageData() does not retrieve image data correctly
+        https://bugs.webkit.org/show_bug.cgi?id=58556
+
+        Tests: fast/canvas/webgl/gl-teximage.html
+
+        * platform/graphics/qt/GraphicsContext3DQt.cpp:
+        (WebCore::GraphicsContext3D::getImageData):
+
 2011-05-09  Jeremy Noble  <jer.noble@apple.com>
 
         Reviewed by Simon Fraser.
